add  changedevicestate method
